tests/invalid/wrong_order.c
int main() {
    return 4-;
}
// ERROR: Line 2, Error 2003